# healthSpring

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  deny.toml  domain_profile.toml  rustfmt.toml
barracuda/: Cargo.toml
barracuda/benches/: cpu_parity.rs  kokkos_parity.rs  upstream_parity.rs
barracuda/shaders/health/: beat_classify_batch_f64.wgsl  diversity_f64.wgsl  hill_dose_response_f64.wgsl  michaelis_menten_batch_f64.wgsl  population_pk_f64.wgsl
barracuda/src/: biosignal.rs  diagnostic.rs  endocrine.rs  gpu.rs  lib.rs  microbiome.rs  pkpd.rs  rng.rs  visualization.rs  wfdb.rs
barracuda/src/biosignal/: classification.rs  ecg.rs  fft.rs  fusion.rs  hrv.rs  mod.rs  ppg.rs  stress.rs
barracuda/src/gpu/: context.rs  dispatch.rs  mod.rs
barracuda/src/pkpd/: diagnostics.rs  dose_response.rs  mod.rs  nca.rs  nlme.rs  nonlinear.rs  pbpk.rs  population.rs  util.rs
barracuda/src/visualization/: capabilities.rs  clinical.rs  clinical_nodes.rs  ipc_push.rs  mod.rs  nodes.rs  scenarios.rs  stream.rs  types.rs
ecoPrimal/: Cargo.toml
ecoPrimal/benches/: cpu_parity.rs  gpu_parity.rs  kokkos_parity.rs  upstream_parity.rs
ecoPrimal/shaders/health/: beat_classify_batch_f64.wgsl  diversity_f64.wgsl  hill_dose_response_f64.wgsl  michaelis_menten_batch_f64.wgsl  population_pk_f64.wgsl  scfa_batch_f64.wgsl
ecoPrimal/src/: cast.rs  diagnostic.rs  lib.rs  math_dispatch.rs  microbiome.rs  microbiome_transfer.rs  niche.rs  primal_names.rs  provenance.rs  qs.rs  rng.rs  safe_cast.rs  simulation.rs  tolerances.rs  toxicology.rs  tridiagonal_ql_local.rs  uncertainty.rs  validation.rs  wfdb.rs
ecoPrimal/src/biosignal/: attention.rs  classification.rs  ecg.rs  eda.rs  fft.rs  fusion.rs  hrv.rs  mod.rs  ppg.rs  stress.rs
ecoPrimal/src/certification/: bare.rs  composition.rs  domain.rs  mod.rs
ecoPrimal/src/comparative/: canine.rs  feline.rs  mod.rs  species_params.rs
ecoPrimal/src/composition/: context.rs  mod.rs  routing.rs
ecoPrimal/src/data/: discovery.rs  fetch.rs  mod.rs  ncbi_http.rs  provenance.rs  rpc.rs  storage.rs
ecoPrimal/src/diagnostic/: assessment.rs  mod.rs  population.rs
ecoPrimal/src/discovery/: affinity_landscape.rs  compound.rs  fibrosis.rs  hts.rs  matrix_score.rs  mod.rs
ecoPrimal/src/endocrine/: mod.rs  testosterone.rs  trt_outcomes.rs
ecoPrimal/src/gpu/: barracuda_rewire.rs  context.rs  cpu_fallback.rs  dispatch.rs  fused.rs  mod.rs  ode_systems.rs  sovereign.rs  types.rs
ecoPrimal/src/ipc/: audit.rs  barracuda_client.rs  btsp.rs  client.rs  compute_dispatch.rs  data_dispatch.rs  discover.rs  dispatch.rs  error.rs  inference_dispatch.rs  lifecycle_dispatch.rs  mcp.rs  mod.rs  proptest_ipc.rs  protocol.rs  resilience.rs  rpc.rs  shader_dispatch.rs  socket.rs  tower_atomic.rs  transport.rs
ecoPrimal/src/microbiome/: anderson.rs  clinical.rs  mod.rs
ecoPrimal/src/pkpd/: allometry.rs  diagnostics.rs  dose_response.rs  mod.rs  nca.rs  nonlinear.rs  pbpk.rs  population.rs  util.rs
ecoPrimal/src/provenance/: mod.rs  records_composition.rs  records_discovery.rs  records_gpu.rs  records_infra.rs  records_science.rs  registry.rs
ecoPrimal/src/simulation/: causal_chain.rs  ecosystem.rs  mod.rs  population.rs  stress.rs
ecoPrimal/src/toxicology/: hormesis.rs  mod.rs  wetspring_cross_validation.rs
ecoPrimal/src/validation/: check.rs  harness.rs  metrics.rs  mod.rs  or_exit.rs  sink.rs
ecoPrimal/src/visualization/: capabilities.rs  clinical.rs  mod.rs  nodes.rs  stream.rs  types.rs
ecoPrimal/src/wfdb/: annotations.rs  mod.rs  parser.rs
ecoPrimal/tests/: integration_composition.rs  integration_ipc.rs  integration_registry_sync.rs  integration_wfdb.rs  parity_primal_proof.rs
experiments/exp002_one_compartment_pk/: Cargo.toml
experiments/exp002_one_compartment_pk/src/: main.rs
experiments/exp003_two_compartment_pk/: Cargo.toml
experiments/exp003_two_compartment_pk/src/: main.rs
experiments/exp004_mab_pk_transfer/: Cargo.toml
experiments/exp004_mab_pk_transfer/src/: main.rs
experiments/exp010_diversity_indices/: Cargo.toml
experiments/exp010_diversity_indices/src/: main.rs
experiments/exp012_cdiff_resistance/: Cargo.toml
experiments/exp012_cdiff_resistance/src/: main.rs
experiments/exp020_pan_tompkins_qrs/: Cargo.toml
experiments/exp020_pan_tompkins_qrs/src/: main.rs
experiments/exp021_hrv_metrics/: Cargo.toml
experiments/exp021_hrv_metrics/src/: main.rs
experiments/exp022_ppg_spo2/: Cargo.toml
experiments/exp022_ppg_spo2/src/: main.rs
experiments/exp031_testosterone_pellet_pk/: Cargo.toml
experiments/exp031_testosterone_pellet_pk/src/: main.rs
experiments/exp032_age_testosterone_decline/: Cargo.toml
experiments/exp032_age_testosterone_decline/src/: main.rs
experiments/exp034_trt_cardiovascular/: Cargo.toml
experiments/exp034_trt_cardiovascular/src/: main.rs
experiments/exp036_population_trt_montecarlo/: Cargo.toml
experiments/exp036_population_trt_montecarlo/src/: main.rs
experiments/exp037_testosterone_gut_axis/: Cargo.toml
experiments/exp037_testosterone_gut_axis/src/: main.rs
experiments/exp040_barracuda_cpu_parity/: Cargo.toml
experiments/exp040_barracuda_cpu_parity/src/: main.rs
experiments/exp050_diagnostic_pipeline/: Cargo.toml
experiments/exp050_diagnostic_pipeline/src/: dump_scenario.rs  main.rs
experiments/exp051_population_diagnostic/: Cargo.toml
experiments/exp051_population_diagnostic/src/: main.rs
experiments/exp053_gpu_parity/: Cargo.toml
experiments/exp053_gpu_parity/src/: main.rs
experiments/exp054_gpu_pipeline/: Cargo.toml
experiments/exp055_gpu_scaling/: Cargo.toml
experiments/exp056_study_scenarios/: Cargo.toml
experiments/exp060_cpu_vs_gpu_pipeline/: Cargo.toml
experiments/exp061_mixed_hardware_dispatch/: Cargo.toml
experiments/exp062_pcie_transfer_validation/: Cargo.toml
experiments/exp063_clinical_trt_scenarios/: Cargo.toml
experiments/exp064_ipc_push/: Cargo.toml
petaltongue-health/: Cargo.toml
petaltongue-health/src/: lib.rs  render.rs  theme.rs
toadstool/: Cargo.toml
toadstool/src/: lib.rs  pipeline.rs  stage.rs
(+682 files in other folders)
