# SPDX-License-Identifier: AGPL-3.0-or-later
#
# healthSpring workspace — human health applications of sovereign
# scientific computing.  Each sub-crate retains its own [workspace]
# root so that `cargo test` works both from sub-crate directories
# and from this root via `--manifest-path`.

[workspace]
resolver = "2"
members = [
    "barracuda",
    "metalForge/forge",
    "toadstool",
    "experiments/exp001_hill_dose_response",
    "experiments/exp002_one_compartment_pk",
    "experiments/exp003_two_compartment_pk",
    "experiments/exp004_mab_pk_transfer",
    "experiments/exp005_population_pk",
    "experiments/exp006_pbpk_compartments",
    "experiments/exp010_diversity_indices",
    "experiments/exp011_anderson_gut_lattice",
    "experiments/exp012_cdiff_resistance",
    "experiments/exp013_fmt_rcdi",
    "experiments/exp020_pan_tompkins_qrs",
    "experiments/exp021_hrv_metrics",
    "experiments/exp022_ppg_spo2",
    "experiments/exp023_biosignal_fusion",
    "experiments/exp030_testosterone_im_pk",
    "experiments/exp031_testosterone_pellet_pk",
    "experiments/exp032_age_testosterone_decline",
    "experiments/exp033_trt_weight_trajectory",
    "experiments/exp034_trt_cardiovascular",
    "experiments/exp035_trt_diabetes",
    "experiments/exp036_population_trt_montecarlo",
    "experiments/exp037_testosterone_gut_axis",
    "experiments/exp038_hrv_trt_cardiovascular",
    "experiments/exp040_barracuda_cpu_parity",
    "experiments/exp050_diagnostic_pipeline",
    "experiments/exp051_population_diagnostic",
    "experiments/exp052_petaltongue_render",
    "experiments/exp053_gpu_parity",
    "experiments/exp054_gpu_pipeline",
    "experiments/exp055_gpu_scaling",
    "experiments/exp056_study_scenarios",
    "experiments/exp060_cpu_vs_gpu_pipeline",
    "experiments/exp061_mixed_hardware_dispatch",
    "experiments/exp062_pcie_transfer_validation",
    "experiments/exp063_clinical_trt_scenarios",
    "experiments/exp064_ipc_push",
    "experiments/exp065_live_dashboard",
    "experiments/exp066_barracuda_cpu_bench",
    "experiments/exp067_gpu_parity_extended",
    "experiments/exp068_gpu_benchmark",
    "experiments/exp069_toadstool_dispatch_matrix",
    "experiments/exp070_pcie_p2p_bypass",
    "experiments/exp071_mixed_system_pipeline",
    "experiments/exp072_compute_dashboard",
    "experiments/exp073_clinical_trt_dashboard",
    "experiments/exp074_interaction_roundtrip",
    "experiments/exp075_nlme_cross_validation",
    "experiments/exp076_full_pipeline_scenarios",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "AGPL-3.0-or-later"
