# SPDX-License-Identifier: AGPL-3.0-or-later
#
# healthSpring workspace — human health applications of sovereign
# scientific computing.  Each sub-crate retains its own [workspace]
# root so that `cargo test` works both from sub-crate directories
# and from this root via `--manifest-path`.

[workspace]
resolver = "2"
members = [
    "ecoPrimal",
    "metalForge/forge",
    "toadstool",
    "experiments/exp001_hill_dose_response",
    "experiments/exp002_one_compartment_pk",
    "experiments/exp003_two_compartment_pk",
    "experiments/exp004_mab_pk_transfer",
    "experiments/exp005_population_pk",
    "experiments/exp006_pbpk_compartments",
    "experiments/exp010_diversity_indices",
    "experiments/exp011_anderson_gut_lattice",
    "experiments/exp012_cdiff_resistance",
    "experiments/exp013_fmt_rcdi",
    "experiments/exp020_pan_tompkins_qrs",
    "experiments/exp021_hrv_metrics",
    "experiments/exp022_ppg_spo2",
    "experiments/exp023_biosignal_fusion",
    "experiments/exp030_testosterone_im_pk",
    "experiments/exp031_testosterone_pellet_pk",
    "experiments/exp032_age_testosterone_decline",
    "experiments/exp033_trt_weight_trajectory",
    "experiments/exp034_trt_cardiovascular",
    "experiments/exp035_trt_diabetes",
    "experiments/exp036_population_trt_montecarlo",
    "experiments/exp037_testosterone_gut_axis",
    "experiments/exp038_hrv_trt_cardiovascular",
    "experiments/exp040_barracuda_cpu_parity",
    "experiments/exp050_diagnostic_pipeline",
    "experiments/exp051_population_diagnostic",
    "experiments/exp052_petaltongue_render",
    "experiments/exp053_gpu_parity",
    "experiments/exp054_gpu_pipeline",
    "experiments/exp055_gpu_scaling",
    "experiments/exp056_study_scenarios",
    "experiments/exp060_cpu_vs_gpu_pipeline",
    "experiments/exp061_mixed_hardware_dispatch",
    "experiments/exp062_pcie_transfer_validation",
    "experiments/exp063_clinical_trt_scenarios",
    "experiments/exp064_ipc_push",
    "experiments/exp065_live_dashboard",
    "experiments/exp066_barracuda_cpu_bench",
    "experiments/exp067_gpu_parity_extended",
    "experiments/exp068_gpu_benchmark",
    "experiments/exp069_toadstool_dispatch_matrix",
    "experiments/exp070_pcie_p2p_bypass",
    "experiments/exp071_mixed_system_pipeline",
    "experiments/exp072_compute_dashboard",
    "experiments/exp073_clinical_trt_dashboard",
    "experiments/exp074_interaction_roundtrip",
    "experiments/exp075_nlme_cross_validation",
    "experiments/exp076_full_pipeline_scenarios",
    "experiments/exp077_michaelis_menten_pk",
    "experiments/exp078_antibiotic_perturbation",
    "experiments/exp079_scfa_production",
    "experiments/exp080_gut_brain_serotonin",
    "experiments/exp081_eda_stress_detection",
    "experiments/exp082_arrhythmia_classification",
    "experiments/exp083_gpu_v16_parity",
    "experiments/exp084_v16_cpu_parity_bench",
    "experiments/exp085_gpu_vs_cpu_v16_bench",
    "experiments/exp086_toadstool_v16_dispatch",
    "experiments/exp087_mixed_nucleus_v16",
    "experiments/exp088_unified_dashboard",
    "experiments/exp089_patient_explorer",
    "experiments/exp090_matrix_scoring",
    "experiments/exp091_addrc_hts",
    "experiments/exp092_compound_library",
    "experiments/exp093_chembl_jak_panel",
    "experiments/exp100_canine_il31",
    "experiments/exp101_canine_jak1",
    "experiments/exp094_rho_mrtf_fibrosis",
    "experiments/exp095_ipsc_skin_model",
    "experiments/exp096_niclosamide_delivery",
    "experiments/exp097_affinity_landscape",
    "experiments/exp098_toxicity_landscape",
    "experiments/exp099_hormesis",
    "experiments/exp102_il31_pruritus_timecourse",
    "experiments/exp103_lokivetmab_duration",
    "experiments/exp104_cross_species_pk",
    "experiments/exp105_canine_gut_anderson",
    "experiments/exp106_feline_hyperthyroid",
    "experiments/exp107_qs_augmented_anderson",
    "experiments/exp108_real_16s_anderson",
    "experiments/exp109_mitbih_arrhythmia",
    "experiments/exp110_equine_laminitis",
    "experiments/exp111_causal_terrarium",
    "experiments/exp112_composition_pkpd",
    "experiments/exp113_composition_microbiome",
    "experiments/exp114_composition_health_triad",
    "experiments/exp115_composition_proto_nucleate",
    "experiments/exp116_composition_provenance",
    "experiments/exp117_composition_ipc_roundtrip",
    "experiments/exp118_composition_deploy_graph_validation",
    "experiments/exp119_composition_live_parity",
    "experiments/exp120_composition_live_provenance",
    "experiments/exp121_composition_live_health",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
