# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-barracuda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["ecoPrimals"]
license.workspace = true
description = "Human health pipelines — PK/PD modeling, microbiome analytics, biosignal processing — Rust + GPU via barraCuda"
repository = "https://github.com/ecoPrimals/healthSpring"
keywords = ["pharmacokinetics", "microbiome", "biosignal", "gpu", "wgsl"]
categories = ["science", "command-line-utilities"]

[features]
default = []
gpu = ["dep:wgpu", "dep:tokio", "dep:bytemuck"]
npu = ["dep:akida-driver"]

[dependencies]
# Evolution bridge — unused at Tier 1 (CPU ground-truth). Activated at Tier 3
# when healthSpring primitives absorb into barraCuda (lifecycle, health, discovery).
# See specs/BARRACUDA_REQUIREMENTS.md for absorption roadmap.
barracuda-core = { path = "../../barraCuda/crates/barracuda-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

wgpu = { version = "28", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
akida-driver = { path = "../../phase1/toadstool/crates/neuromorphic/akida-driver", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cpu_parity"
harness = false

[[bench]]
name = "kokkos_parity"
harness = false
