# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-barracuda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["ecoPrimals"]
license.workspace = true
description = "Human health pipelines — PK/PD modeling, microbiome analytics, biosignal processing — Rust + GPU via barraCuda"
repository = "https://github.com/syntheticChemistry/healthSpring"
keywords = ["pharmacokinetics", "microbiome", "biosignal", "gpu", "wgsl"]
categories = ["science", "command-line-utilities"]

[lints]
workspace = true

[features]
default = []
# Optional barraCuda library link — enables direct Rust imports of barracuda::stats,
# barracuda::health, barracuda::special, etc. Disable for sovereign NUCLEUS
# deployment where all math routes through JSON-RPC IPC to the barraCuda
# ecobin primal. When off, math_dispatch routes everything via IPC and
# GPU/science modules that require the library are excluded from compilation.
barracuda-lib = ["dep:barracuda", "dep:barracuda-core"]
gpu = ["dep:wgpu", "dep:tokio", "dep:bytemuck", "barracuda-lib"]
barracuda-ops = ["gpu"]
# Sovereign dispatch via barraCuda SovereignDevice: WGSL → coralReef compile →
# toadStool dispatch → native binary. Replaces strip_f64_enable() workaround.
sovereign-dispatch = ["gpu", "barracuda-lib", "barracuda/sovereign-dispatch"]
# Level 5 primal proof: routes wire-ready math calls (stats.mean, stats.std_dev)
# through barraCuda's JSON-RPC surface over UDS instead of library imports.
# The library dep stays for Level 2 comparison; domain-specific functions
# (hill, shannon, simpson, etc.) stay local — they compose from barraCuda
# primitives rather than being generic IPC methods.
primal-proof = []
# guideStone binary (legacy): primalspring is now always available.
# This feature is retained for backward-compatible cargo invocations
# but has no effect — primalspring is a required dependency.
guidestone = []
nestgate = ["dep:ureq"]
# NPU dispatch is a future evolution — Akida driver will be discovered at
# runtime via capability-based probing, not compiled in as a path dep.
# See metalForge::probe_npu() and specs/EVOLUTION_MAP.md.
npu = []

[dependencies]
# Validated against barraCuda v0.3.13 (workspace current).
# Path dep for local development; CI should pin to a known-good rev.
# barracuda-core is required for barraCuda's internal feature resolution.
barracuda-core = { path = "../../../primals/barraCuda/crates/barracuda-core", default-features = false, optional = true }
barracuda = { path = "../../../primals/barraCuda/crates/barracuda", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
wgpu = { version = "28", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
ureq = { version = "3", optional = true }

# primalSpring composition API — required for CompositionContext,
# ScenarioMeta, ValidationResult, certification engine, and tolerances.
# Pinned to v0.9.25 (interstadial eukaryotic evolution baseline).
primalspring = { path = "../../primalSpring/ecoPrimal", version = "0.9.25" }

[[bin]]
name = "healthspring_primal"
path = "src/bin/healthspring_primal/main.rs"

[[bin]]
name = "validate_pk_models"
path = "src/bin/validate_pk_models.rs"

[[bin]]
name = "healthspring_guidestone"
path = "src/bin/healthspring_guidestone/main.rs"
required-features = ["guidestone"]

[[bin]]
name = "healthspring_unibin"
path = "src/bin/healthspring/main.rs"

[[bin]]
name = "healthspring"
path = "src/bin/healthspring/main.rs"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
toml = "0.8"

[[bench]]
name = "cpu_parity"
harness = false

[[bench]]
name = "kokkos_parity"
harness = false

[[bench]]
name = "gpu_parity"
harness = false
required-features = ["gpu"]

[[bench]]
name = "upstream_parity"
harness = false
required-features = ["barracuda-lib"]
