# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "petaltongue-health"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "healthSpring diagnostic UI prototype — petalTongue evolution candidate"

[[bin]]
name = "healthspring-ui"
path = "src/bin/healthspring_ui.rs"

[dependencies]
healthspring-barracuda = { path = "../barracuda" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
