# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-toadstool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "toadStool compute dispatch for healthSpring — sovereign hardware abstraction"

[features]
default = []
gpu = ["healthspring-barracuda/gpu", "dep:tokio"]

[dependencies]
healthspring-barracuda = { path = "../ecoPrimal" }
healthspring-forge = { path = "../metalForge/forge" }
tokio = { version = "1", features = ["rt"], optional = true }
