# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "healthspring-exp003"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp003_two_compartment_pk"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
