# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp004"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp004_mab_pk_transfer"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }

[lints]
workspace = true
