# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp010"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp010_diversity_indices"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../barracuda" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
