# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp012"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp012_cdiff_resistance"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
serde_json = "1"

[lints]
workspace = true
