# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "healthspring-exp020"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp020_pan_tompkins_qrs"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
