# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "healthspring-exp021"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp021_hrv_metrics"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
serde_json = "1"
