# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "healthspring-exp022"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp022_ppg_spo2"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
serde_json = "1"
