# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp031"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp031_testosterone_pellet_pk"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
