# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp032"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp032_age_testosterone_decline"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../barracuda" }
