# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "healthspring-exp034"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp034_trt_cardiovascular"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
