# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp036"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp036_population_trt_montecarlo"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../barracuda" }
