# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "healthspring-exp040"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "barraCuda CPU parity validation — pure Rust math matches analytical baselines"
publish = false

[[bin]]
name = "exp040_barracuda_cpu_parity"
path = "src/main.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }
