# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "healthspring-exp050"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "exp050_diagnostic_pipeline"
path = "src/main.rs"

[[bin]]
name = "exp050_scenario_dump"
path = "src/dump_scenario.rs"

[dependencies]
healthspring-barracuda = { path = "../../ecoPrimal" }

[lints]
workspace = true
