# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "healthspring-exp062"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Exp062: PCIe P2P transfer validation with realistic healthSpring workload sizes"

[dependencies]
healthspring-forge = { path = "../../metalForge/forge" }

[[bin]]
name = "exp062_pcie_transfer_validation"
path = "src/main.rs"
